src/app/components/modal/modal.component.scss
:host {
  display: block;
}

.modal {
  @apply relative z-30;

  .card {
    @apply relative w-full transform overflow-y-auto;
    @apply sm:rounded-lg sm:h-fit bg-white text-left;
    @apply shadow-xl transition-all sm:my-8 sm:max-w-lg;
    @apply p-4 max-h-screen h-screen sm:max-h-full;
  }
}

.backdrop {
  @apply fixed inset-0 bg-gray-400 bg-opacity-75 backdrop-blur-sm transition-opacity;
}

.footer {
  @apply bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6;
}

.content {
  @apply mt-2;
}

button.cancel {
  @apply absolute right-2 top-2 rounded-full p-2 text-gray-500;
  @apply transition-colors duration-300 ease-linear;

  &:hover {
    @apply bg-gray-200 text-gray-900;
  }
}

h3 {
  @apply text-lg font-semibold leading-6 text-gray-900;
}

